Create all pages and logics

--- a/src/app/(dashboard)/styles.scss
+++ b/src/app/(dashboard)/styles.scss
@@ -1,7 +1,7 @@
 @import "../global.scss";
 
 .main {
-  width: 100%;
+  width: 100% !important;
   border-radius: 16px;
   background-color: white !important;
   padding: 50px 30px;
