--- a/src/components/PackageDetail/styles.scss
+++ b/src/components/PackageDetail/styles.scss
@@ -10,9 +10,10 @@
 
     &__price {
       margin-left: 5px;
+      font-size: 18px !important;
     }
     &__tag {
-      padding: 4px 15px;
+      padding: 4px 15px !important;
       background-color: $lightGray;
       border-radius: 8px;
       font-size: 12px;
